--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "http-proxy-middleware": "^0.19.1",
+    "axios": "^0.21.0",
+    "http-proxy-middleware": "^1.0.6",
     "materialize-css": "^1.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "package-lock-only": "0.0.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
     "react-stripe-checkout": "^2.6.3",
-    "redux": "^4.0.4",
-    "redux-form": "8.1.0",
+    "redux": "^4.0.5",
+    "redux-form": "8.3.7",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
